--- a/src/components/homepage/server.scss
+++ b/src/components/homepage/server.scss
@@ -5,3 +5,178 @@ body {
 
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
   }
+  .maincontaner{
+    margin-top: 1.5rem;
+  }
+
+.title-font{
+  font-size: small;
+}
+.btn-danger{
+  position: relative;
+  float: right;
+}
+.cartContaner{
+  position: absolute;
+  right: 0;
+  margin-right: 3rem;
+  font-size: 1rem;
+  padding: 1px;
+}
+.fas{
+  // border: 1px solid red;
+  cursor: pointer;
+  color: black;
+  // width: 30px;
+}
+.maincontaner{
+  position: relative;
+  margin-top: 0;
+  
+}
+.userContaner{
+  position: absolute;
+  top: 2rem;
+  right: 0;
+  list-style-type: none;
+  color: black;
+  cursor: pointer;
+  background-color: #fff;
+ border-radius: var(--border-radius);
+ margin-right: 1rem;
+
+
+ 
+ 
+
+
+
+
+}
+
+
+.userContaner ul li{
+  font-size: small;
+  margin-right: 2rem;
+}
+
+.userContaner ul hr{
+  margin: 10px;
+}
+
+
+// profile csss
+.App {
+  --primary-bg: #242526;
+  --secondary-bg: #fff;
+  --primary-text-color: #555;
+  --secondary-text-color: #cecece;
+  --border-radius: 8px;
+  --speed: 500ms;
+}
+
+ul{
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.menu-trigger img{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+  background-color: #fff;
+}
+
+.dropdown-menu{
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  background-color: #fff;
+  border-radius: var(--border-radius);
+  padding: 10px 20px;
+  width: 200px;
+}
+
+.dropdown-menu::before{
+  content: '';
+  position: absolute;
+  top: -5px;
+  right: 20px;
+  height: 20px;
+  width: 20px;
+  background: var(--secondary-bg);
+  transform: rotate(45deg);
+}
+
+.dropdown-menu.active{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: var(--speed) ease;
+}
+
+.dropdown-menu.inactive{
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: var(--speed) ease;
+}
+
+
+h3{
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px 0;
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--primary-text-color);
+  line-height: 1.2rem;
+}
+
+h3 span{
+  font-size: 14px;
+  color: var(--secondary-text-color);
+  font-weight: 400;
+}
+
+.dropdown-menu ul li{
+  padding: 10px  0;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.dropdown-menu ul li:hover a{
+  color: rgb(212, 33, 9);
+  cursor: pointer;
+}
+
+.dropdown-menu ul li:hover img{
+  opacity: 1;
+  cursor: pointer;
+}
+
+.dropdownItem{
+  display: flex;
+  margin: 10px auto;
+}
+
+.dropdownItem img{
+  max-width: 20px;
+  margin-right: 10px;
+  opacity: 0.5;
+  transition: var(--speed);
+}
+
+.dropdownItem a{
+  max-width: 100px;
+  margin-left: 10px;
+  transition: var(--speed);
+}
