add image slider page

--- a/src/components/loginComponents/login.scss
+++ b/src/components/loginComponents/login.scss
@@ -1,7 +1,40 @@
 .rowSectionmain{
-    width: 70%;
-    margin: 0;
+    width: 50%;
+    margin: auto;
+      
+    
+}
+.mainSell{
     margin-left: 15%;
+    width: 50%;
+    margin: auto;
+    // text-align: center;
+    h2{
+        text-align: center;
+        // margin-top: 3rem;
+    }
+    .loginavtar{
+        margin: 1rem;
+        height: 6rem;
+        img{
+            border-radius: 50%;
+        }
+    }
+}
+.imgUpload{
+    margin-top: 1rem;
+}
+// profile style
     
-    
+
+.Profilemaincontaner{
+    margin-top: 5rem;
+    text-align: center;
+    .imgdiv  img{
+        height: 7rem;
+        border-radius: 50%;
+    }
+    h2{
+        margin-top: 1rem;
+    }
 }
