--- a/src/components/homepage/server.scss
+++ b/src/components/homepage/server.scss
@@ -1,6 +1,7 @@
 body {
     font-family: Roboto, Helvetica, Arial, sans-serif;
   }
+  @import '~mdb-ui-kit/css/mdb.min.css';
   .gradient-custom {
 
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
@@ -36,7 +37,7 @@ body {
 }
 .userContaner{
   position: absolute;
-  top: 2rem;
+  top: 2.4rem;
   right: 0;
   list-style-type: none;
   color: black;
@@ -44,6 +45,7 @@ body {
   background-color: #fff;
  border-radius: var(--border-radius);
  margin-right: 1rem;
+
 
 
  
@@ -65,72 +67,6 @@ body {
 }
 
 
-// profile csss
-.App {
-  --primary-bg: #242526;
-  --secondary-bg: #fff;
-  --primary-text-color: #555;
-  --secondary-text-color: #cecece;
-  --border-radius: 8px;
-  --speed: 500ms;
-}
-
-ul{
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.menu-trigger img{
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  overflow: hidden;
-  cursor: pointer;
-  background-color: #fff;
-}
-
-.dropdown-menu{
-  position: absolute;
-  top: 70px;
-  right: 10px;
-  background-color: #fff;
-  border-radius: var(--border-radius);
-  padding: 10px 20px;
-  width: 200px;
-}
-
-.dropdown-menu::before{
-  content: '';
-  position: absolute;
-  top: -5px;
-  right: 20px;
-  height: 20px;
-  width: 20px;
-  background: var(--secondary-bg);
-  transform: rotate(45deg);
-}
-
-.dropdown-menu.active{
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-  transition: var(--speed) ease;
-}
-
-.dropdown-menu.inactive{
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-20px);
-  transition: var(--speed) ease;
-}
-
-
 h3{
   width: 100%;
   text-align: center;
@@ -148,20 +84,7 @@ h3 span{
   font-weight: 400;
 }
 
-.dropdown-menu ul li{
-  padding: 10px  0;
-  border-top: 1px solid rgba(0, 0, 0, 0.05);
-}
 
-.dropdown-menu ul li:hover a{
-  color: rgb(212, 33, 9);
-  cursor: pointer;
-}
-
-.dropdown-menu ul li:hover img{
-  opacity: 1;
-  cursor: pointer;
-}
 
 .dropdownItem{
   display: flex;
@@ -179,4 +102,18 @@ h3 span{
   max-width: 100px;
   margin-left: 10px;
   transition: var(--speed);
+}
+// user onclick button
+.shadow-custom {
+  box-shadow: 0 2px 0px 0 rgba(0, 0, 0, .25), 0 3px 6px 0px rgba(0, 0, 0, 0.63) !important;
+}
+
+// image slider
+
+.carousel-inner{
+  .carousel-item{
+    img{
+      height: 90vh;
+    }
+  }
 }
